<resources>
    <string name="app_name">OpenCourt</string>
    <string name="tab_home">Home</string>
    <string name="tab_search">Search</string>
    <string name="tab_create">Create</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_default">Tab</string>
    <string name="map">Map</string>
    <string name="new_court">New Court</string>
    <string name="settings">Settings</string>

    <string name="court_availability">Available\nCourts: %1$d/%2$d</string>
    <!--AddCourtFragment-->
    <string name="court_name">Court Name</string>
    <string name="court_name_hint">SFU Courts</string>
    <string name="court_type">Court Type</string>
    <string name="court_type_hint">Tennis</string>
    <string name="address">Address</string>
    <string name="address_hint">Address, Example Street, Burnaby, BC</string>
    <string name="num_courts">Number of Courts</string>
    <string name="num_courts_hint">4</string>
    <string name="amenities">Amenities</string>
    <string name="lights">Lights</string>
    <string name="indoor">Indoor</string>
    <string name="washroom">Washroom</string>
    <string name="accessibility">Accessibility</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="court_details">Court Details</string>
    <string name="court_photo">Court Photo</string>
    <string name="add_photo">Add Photo</string>

    <!-- SettingsFragment -->
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="username_hint">TennisPlayer12</string>
    <string name="email">Email</string>
    <string name="email_hint">new.email@example.com</string>
    <string name="change_email">Change email</string>
    <string name="password">Password</string>
    <string name="preferences">Preferences</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="location_access">Location Access</string>
    <string name="save">Save</string>
    <string name="other_settings">Other Settings</string>
    <string name="other_settings_hint">4</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="map_types">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>

    <!-- Court Type Options -->
    <string-array name="court_type_options">
        <item>Tennis</item>
        <item>Basketball</item>
    </string-array>

    <string name="tennis_options">Tennis Options</string>
    <string name="basketball_options">Basketball Options</string>
    <string name="practice_wall">Practice Wall</string>
    <string name="nets">Nets</string>

    <!-- LoginActivity Strings -->
    <string name="login">Login</string>
    <string name="login_with_gmail">Log in with Google</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="switch_to_login">Already have an account? Log in</string>
    <string name="login_title">Login to your account</string>
    <string name="signup_title">Create your account</string>
</resources>